2007-08-28  Bastien Nocera  <hadess@hadess.net>

	* configure.ac: Check for xmllint

	* Makefile.am: run test-mime-data from xdgmime if we're running in CVS
	and have xdgmime checked out and built in the parent
	* tests/*: add loads of test data and a test list from Matthias Clasen
	<mclasen@redhat.com> (Closes: #5210)

	* freedesktop.org.xml.in:
	- Remove "Microsoft Word 6.0 Document" matchlet at offset 2080, it's a
	localised string (ie. says "Dokument" in German, etc.)
	- Add better matchlets from file(1) for word documents
	- Add magic for StarWriter (tentative) and for glade files
	- Up the priority of the EPS matchlet so that EPS files are not
	recognised as postscript files

2007-08-12  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add a mime-type for QTIF QuickTime image
	files

=== shared-mime-info 0.22 ===

2007-07-30  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* Makefile.am: upd

2007-07-27  Bastien Nocera  <hadess@hadess.net>

	* configure.in: bump up the release version, need to do a release

2007-07-27  Frederic Crozat  <fcrozat@mandriva.com>

	* freedesktop.org.xml.in: Add audio/ogg, video/ogg as subclasses of
	application/ogg and add relevant extensions.

2007-07-26  Frederic Crozat  <fcrozat@mandriva.com>

	* freedesktop.org.xml.in: Add video/avi as alias for video/x-msvideo,
	some Windows mail clients still use it, #11729.

2007-07-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the application/x-nintendo-ds-rom
	mime-type for Nintendo DS ROMs

2007-06-27  Christian Neumair  <cneumair@gnome.org>

	* Makefile.am: Install shared-mime-info.pc to $datadir/pkgconfig
	instead of $libdir/pkgconfig, #10698 (revert).

2007-07-22  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the iRiver PLA playlist format,
	patch from Jonathan Matthew <jonathan@kaolin.wh9.net>
	(Closes: #11604)

2007-06-27  Christian Neumair  <cneumair@gnome.org>
