@@ -4002,10 +4002,16 @@ command to generate the output files.
     <acronym>ASF</acronym>
     <expanded-acronym>Advanced Streaming Format</expanded-acronym>
     <glob pattern="*.asf"/>
-    <glob pattern="*.nsc"/>
     <magic priority="50">
       <match type="big32" value="0x3026b275" offset="0"/>
       <match type="string" value="[Reference]" offset="0"/>
+    </magic>
+  </mime-type>
+  <mime-type type="application/x-netshow-channel">
+    <sub-class-of type="video/x-ms-asf"/>
+    <_comment>Windows Media Station file</_comment>
+    <glob pattern="*.nsc"/>
+    <magic priority="50">
       <match type="string" value="[Address]" offset="0"/>
     </magic>
   </mime-type>
