@@ -37,6 +37,10 @@ ooo.sxw application/vnd.sun.xml.writer
 ooo.vor application/vnd.stardivision.writer
 ooo-xp.doc application/msword
 
+# Playlist formats supported by Totem
+stream.nsc application/x-netshow-channel
+playlist.asx audio/x-ms-asx
+
 # text
 text-iso8859-15.txt text/plain ox
 text-utf8.txt text/plain ox
