@@ -1,0 +1,14 @@
+<asx version = "3.0">
+  <entry>
+    <ref href = "http://support.bbc.co.uk/multicast/asx/bbcone.nsc"/>
+  <Title>BBC One</Title>
+  <Author>BBC</Author>
+  <Copyright>BBC</Copyright>
+  <Banner></Banner>
+  </entry>
+  <Title>BBC One</Title>
+  <Author>BBC</Author>
+  <Copyright>BBC</Copyright>
+  <Banner></Banner>
+  <LogURL href = ""/>
+</asx>
